release: add bound multi-camera support
